modified kafka module